--- a/GlowMusicPlayer/GlowMusicPlayer/GlowMusicPlayer/Form1.resx
+++ b/GlowMusicPlayer/GlowMusicPlayer/GlowMusicPlayer/Form1.resx
@@ -127,12 +127,11 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAA+wAAAAIB
-        AAAAAQAAAAAAAAAAAAAAAOYAAAAAAwAACABEAAAAQwA6AFwAVQBzAGUAcgBzAFwAQQB1AHIAaQBnAGEA
-        XABWAGkAZABlAG8AcwBcAEMAbwBtAHAAIAAxAC4AbQBvAHYAAAAFAAAAAAAAAPA/AwAAAAAABQAAAAAA
-        AAAAAAgAAgAAAAAAAwABAAAACwD//wMAAAAAAAsA//8IAAIAAAAAAAMAAAAAAAsAAAAIAAoAAABuAG8A
-        bgBlAAAACwAAAAsAAAALAP//CwD//wsAAAAIAAIAAAAAAAgAAgAAAAAACAACAAAAAAAIAAIAAAAAAAsA
-        AAARJwAA/BEAAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAuQAAAAIB
+        AAAAAQAAAAAAAAAAAAAAAKQAAAAAAwAACAACAAAAAAAFAAAAAAAAAPA/AwAAAAAABQAAAAAAAAAAAAgA
+        AgAAAAAAAwBkAAAACwD//wMAAAAAAAsA//8IAAIAAAAAAAMAAAAAAAsAAAAIAAoAAABuAG8AbgBlAAAA
+        CwAAAAsAAAALAP//CwD//wsAAAAIAAIAAAAAAAgAAgAAAAAACAACAAAAAAAIAAIAAAAAAAsAAAARJwAA
+        iRAAAAs=
 </value>
   </data>
   <data name="axWindowsMediaPlayer1.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
